--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="menu-header">
             <ul>
                 <li><a href="#">Головна</a></li>
-                <li><a href="#">Породи собак</a></li>
-                <li><a href="#">Собачий корм</a></li>
+                <li><a href="https://www.purina.ua/dogs/breed-library">Породи собак</a></li>
+                <li><a href="https://pethouse.ua/ru/shop/sobakam/suhoi-korm/">Собачий корм</a></li>
                 <li><a href="./pages/komanda.html">Про нас</a></li>
             </ul>
         </div>
