--- a/pages/komanda.html
+++ b/pages/komanda.html
@@ -18,21 +18,21 @@
 <!-- -----------2222222222222222222----------------------------   -->
   <div class="card">
     <div class="front"><span> <img src="./img/stepan.png" width="300" height="400"  ></span> </div>
-     <div class="back"><span><H4>   Головний розвідник </H4><br>Кіт Степан<br><br>
+     <div class="back"><span><H4>   Головний розвідник  <br>У Степана  мільйон підписників <br> у TikTok  і 769 тисяч фоловерів <br> в Instagram</H4><br>Кіт Степан<br><br>
       <img src=" https://s02.yapfiles.ru/files/1687402/_004.png " width="80" height="80"><br>ПОЗНАЙОМИМОСЬ!!!
     </span></div>
   </div>
   <!-- ------------33333333333333333333--------------------   -->
   <div class="card">
     <div class="front"><span> <img src="./img/gusak.png" width="300" height="400"  ></span> </div>
-     <div class="back"><span><H4> Спеціальний гусак із біолабораторії </H4><br>Бандерогусак<br><br>
+     <div class="back"><span><H4> Спеціальний гусак із біолабораторії <br> Супутниковий GPS та ехолокатори <br> Очі тепловізори</H4><br>Бандерогусак<br><br>
       <img src=" https://s02.yapfiles.ru/files/1687402/_004.png " width="80" height="80"><br>Ласкаво просимо!!!
     </span></div>
   </div>
    <!-- ------------444444444444444444444444444444--------------------   -->
    <div class="card">
     <div class="front"><span> <img src="./img/komar.png" width="300" height="450"  ></span> </div>
-     <div class="back"><span><H4> Бойовий комар на ротації </H4><br>Комар Вася<br><br>
+     <div class="back"><span><H4> Бойовий комар на ротації </H4><br>Комар Валєра. <br>Вирівнює лейкоцити та цукор. <br>Понижує холестирин,змінює групу <br> та колір крові<br><br>
       <img src=" https://s02.yapfiles.ru/files/1687402/_004.png " width="80" height="80"><br>Ласкаво просимо!!!
     </span></div>
   </div>
